in_progress -> feat -> QueryClient -> RESTClient